# ravendb-cpp-client

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build-test-dockers.ps1  dockerfile.linux  raven_cpp_client.sln  run-linux-test-docker.ps1
Raven.CppClient/: AttachmentDetails.h  AttachmentName.h  AttachmentType.h  AutoSpatialMethodType.h  BatchCommandResult.h  BuildNumber.h  CMakeLists.txt  ClientConfiguration.h  CollectionStatistics.h  CommandType.h  CompactSettings.h  ConcurrencyCheckMode.h  CopyAttachmentCommandData.h  DatabasePromotionStatus.h  DateTimeOffset.h  DeleteAttachmentCommandData.h  DeleteCommandData.h  DeleteDatabaseResult.h  DisableDatabaseToggleResult.h  ExplanationOptions.h  FieldIndexing.h  FieldStorage.h  FieldTermVector.h  GetClientConfigurationOperation.h  GetDocumentsResult.h  GetResponse.h  HiLoResult.h  HighlightingOptions.h  IndexDefinition.h  IndexFieldOptions.h  IndexLockMode.h  IndexPriority.h  IndexRunningStatus.h  IndexStats.h  IndexType.h  IndexingError.h  JsonExtensions.h  LeaderStamp.h  MetadataAsDictionary.h  MetadataDictionaryArray.h  (+26 more)
Raven.CppClient.Tests/: AttachmentsSessionTest.cpp  CMakeLists.txt  ConnectionDetailsHolder.cpp  Raven.CppClient.Tests.vcxproj  Raven_CppClient_Tests.sln  Raven_CppClient_Tests[1]_include.cmake  ds_definitions.cpp  pch.h  re_definitions.cpp  win_ctest_output.txt
Raven.CppClient.Tests/Testing/Temporary/: CTestCostData.txt
Tryouts/: Tryouts.vcxproj
cmake/: config.cmake  xxhash.cmake
cmake/win/: LICENSE_1_0.txt
win_re_config/: secured_re.txt
